--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <meta charset="utf-8" />
     <title>TITLE</title>
+    <link rel="stylesheet" type="text/css" href="/css/styels.css">
   </head>
   <body>
   </body>
