--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<img src="kuvat/header.jpg" class="img-fluid rounded" alt="Event picure">
+					<img src="Kuvat/header.jpg" class="img-fluid rounded" alt="Event picure">
 				</div>
 			</div>
 		</div>		
