--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<script src="https://kit.fontawesome.com/48b58689e2.js" crossorigin="anonymous"></script>
     <title>RUN4! - Hyväntekeväisyystapahtuma</title>
