--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 				</div>
 				<div class="col">
 					<div class="center">	
-						<p><img src="kuvat/bvfi.jpg" alt="Bearded Villains Finland ry"></p>
-						<p><img src="kuvat/Aivoliitto.jpg" alt="Aivoliitto"></p>
+						<p><img src="/kuvat/bvfi.jpg" alt="Bearded Villains Finland ry"></p>
+						<p><img src="/kuvat/Aivoliitto.jpg" alt="Aivoliitto"></p>
 					</div>
 				</div>
 			</div>
