--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles.css">
 	<script src="https://kit.fontawesome.com/48b58689e2.js" crossorigin="anonymous"></script>
     <title>RUN4! - Hyväntekeväisyystapahtuma</title>
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<img src="/Kuvat/header.jpg" class="img-fluid rounded" alt="Event picure">
+					<img src="kuvat/header.jpg" class="img-fluid rounded" alt="Event picure">
 				</div>
 			</div>
 		</div>		
@@ -59,8 +59,8 @@
 				</div>
 				<div class="col">
 					<div class="center">	
-						<p><img src="/kuvat/bvfi.jpg" alt="Bearded Villains Finland ry"></p>
-						<p><img src="/kuvat/Aivoliitto.jpg" alt="Aivoliitto"></p>
+						<p><img src="kuvat/bvfi.jpg" alt="Bearded Villains Finland ry"></p>
+						<p><img src="kuvat/Aivoliitto.jpg" alt="Aivoliitto"></p>
 					</div>
 				</div>
 			</div>
